<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_todo_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/add_new_todo_dialog_title_padding"
            android:text="@string/add_todo_dialog_title"
            android:textColor="#212121" />
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/new_todo_container_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_title"
                    android:drawableLeft="@drawable/ic_add_new_task_title"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/todo_title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_content"
                    android:drawableLeft="@drawable/ic_add_new_task_content"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/todo_content_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/todo_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="@dimen/input_padding"
                tools:ignore="SpeakableTextPresentCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_date"
                    android:drawableLeft="@drawable/ic_add_new_task_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/todo_date_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_time"
                    android:drawableLeft="@drawable/ic_add_new_task_date"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding"
                    android:hint="@string/todo_time_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/todo_dialog_linear_margin_right"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/todo_dialog_linear_margin_top"
                android:layout_marginBottom="@dimen/todo_dialog_linear_margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cancel"
                    android:text="@string/add_todo_dialog_cancel_text"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/add_new_todo"
                    android:layout_marginLeft="@dimen/todo_dialog_add_margin_left"
                    android:text="@string/add_todo_dialog_title"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
